--- a/public/ahr/assets/default_css/main.css
+++ b/public/ahr/assets/default_css/main.css
@@ -4721,8 +4721,8 @@ tbody.collapse.in {
 
 .nav>li>a:hover,
 .nav>li>a:focus {
-    text-decoration: none;
-    background-color: #eee
+    /*text-decoration: none;
+    background-color: #eee*/
 }
 
 .nav>li.disabled>a {
