--- a/public/assets/css/ahr.css
+++ b/public/assets/css/ahr.css
@@ -568,3 +568,61 @@ td,tr,th,p,h1,h2,h3,h4,h5,h6,span,a,div,button,label,li,ul,table tbody tr th,tab
   margin-left: 0px !important;
 }
 
+/* bs_lp */
+
+.background3 , .background5 , .background7{
+	text-align: center;
+	margin:0 auto;
+}
+.background4 , .background6 , .background8{
+	text-align: center;
+	margin:0 auto;
+	background-color:#00A6EA;
+}
+.bs_lp_footer{
+	margin-top: 150px;
+	background: #6CC9F3;
+	height: 180px;
+	width: 100%;
+	text-align: center;
+	color: #FFF;
+}
+.bs_lp_footer ul{
+	padding-top: 5px;
+}
+.bs_lp_footer li{
+	display: inline-block;
+	list-style: none;
+	padding: 20px;
+
+}
+.bs_lp_footer li a{
+	color: #FFF;
+}
+/* bs_news */
+
+
+.ahr-label_bs{
+  color:#00B9EF !important;
+}
+.label-gray{
+  background: #F5F6F7;
+  margin: 0px !important;
+  color: #6F6F6B;
+  padding: 3px;
+  width: 70px;
+  text-align: left;
+  margin-right: 5px !important;
+}
+.assess-default{
+  padding:5px 10px;
+  font-size: 25px;
+  border: #00B9EF solid 1px;
+  text-align: center;
+  color:#00B9EF !important;
+  line-height: 40px;
+}
+.assess-default:hover{
+  color:#FFF !important;
+  background: #00B9EF !important;
+}
