--- a/public/assets/css/ahr.css
+++ b/public/assets/css/ahr.css
@@ -632,3 +632,58 @@ td,tr,th,p,h1,h2,h3,h4,h5,h6,span,a,div,button,label,li,ul,table tbody tr th,tab
   color:#FFF !important;
   background: #00B9EF !important;
 }
+
+/* image upload button */
+.fileUpload {
+     position: relative;
+     overflow: hidden;
+ }
+ .fileUpload span{
+     font-size: 13px;
+ }
+ .fileUpload input.upload {
+     position: absolute;
+     top: 0;
+     right: 0;
+     margin: 0;
+     padding: 0;
+     font-size: 20px;
+     cursor: pointer;
+     opacity: 0;
+     filter: alpha(opacity=0);
+ }
+ .cropit_form{
+   text-align: center;
+ }
+ .update_photo_big .cropit-preview {
+   /* You can specify preview size in CSS */
+   width: 650px;
+   height: 150px;
+   margin: auto;
+ }
+ .update_photo_smile .cropit-preview {
+   /* You can specify preview size in CSS */
+   width: 200px;
+   height: 200px;
+   margin: auto;
+ }
+ /* Translucent background image */
+ .cropit-preview-background {
+   opacity: .2;
+ }
+ .cropit-image-zoom-input{
+   width: 300px !important;
+   display: initial !important;
+ }
+
+ input.cropit-image-zoom-input {
+   position: relative;
+ }
+ .cropit-image-input.custom {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1px;
+    height: 1px;
+ }
