--- a/public/ahr/assets/css/custom.css
+++ b/public/ahr/assets/css/custom.css
@@ -7,7 +7,9 @@ body {
     background: -webkit-gradient(linear, left top, left bottom, color-stop(15%, #ffffff), color-stop(15%, #ffffff), color-stop(100%, #e2c151));
     /* Chrome,Safari4+ */
 }
-
+.clearfix{
+    width: 1250px !important;
+}
 .background {
     background-image: url('../img/f.png');
     background-position: center top;
