--- a/public/assets/css/ahr.css
+++ b/public/assets/css/ahr.css
@@ -1,6 +1,9 @@
 body{
 	background: #F1FAFE;
 }
+.clearfix{
+    width: 1250px !important;
+}
 td,tr,th,p,h1,h2,h3,h4,h5,h6,span,a,div,button,label,li,ul,table tbody tr th,table tbody tr td{
 	font-family: "小塚ゴシック Pr6N" !important;
 }
