--- a/public/assets/css/ahr.css
+++ b/public/assets/css/ahr.css
@@ -696,3 +696,39 @@ blockquote{
     width: 1px;
     height: 1px;
  }
+ /* analysis */
+ .analysis_form .number{
+     list-style: none;
+     float: left;
+     padding: 7px 10px 7px 10px;
+     margin-right: 5px;
+     border-radius: 20px;
+     background: #ACCFF1;
+     margin-top: 20px;
+     display: block;
+     border: 3px double #EEE;
+     color: #FFF !important;
+ }
+ .analysis_form .number.done{
+   background: #3197FA;
+ }
+ .analysis_form .number.active{
+   background: #FFF !important;
+   border: 3px double #CCC;
+   color: #000 !important;
+ }
+ .analysis_form .wizard{
+   display: inline-block;
+   padding: 5px 14px;
+   background-color: #f6f6f6;
+   border: 1px solid #f6f6f6;
+   border-radius: 15px;
+ }
+ .analysis_form .wizard li a{
+   background-color: #FFF !important;
+   border: 1px #CCC solid;
+ }
+ .analysis_form .wizard li a:hover{
+   background-color: #1c7ebb !important;
+   color: #FFF;
+ }
